# OpenGL_CMake_StarterCode

./: CMakeLists.txt
OpenGL_CMake/: CMakeLists.txt  main.cpp
